modified:   README.md 	modified:   Release.zip 	modified:   Source/CMakeLists.txt 	deleted:    Source/CMakeLists.txt.user 	modified:   Source/mainwindow.cpp 	modified:   Source/mainwindow.h 	Source/config/N4000_icon.ico 	Source/icon.rc

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -10,15 +10,17 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Charts PrintSupport)
-find_package(Matlab REQUIRED)
-include_directories(${Matlab_INCLUDE_DIRS})
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets PrintSupport)
 
 set(PROJECT_SOURCES
         main.cpp
         mainwindow.cpp
         mainwindow.h
         mainwindow.ui
+        ${RES_FILES}
+        icon.rc
+        ${RES_FILES}
+
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
@@ -38,8 +40,6 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         vftflow.h vftflow.cpp vftflow.ui
         launch.h launch.cpp launch.ui
         mywindow.h mywindow.cpp
-
-
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET brain_N5000 APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
@@ -59,7 +59,7 @@ else()
     endif()
 endif()
 
-target_link_libraries(brain_N5000 PRIVATE Qt${QT_VERSION_MAJOR}::Widgets ws2_32 Qt${QT_VERSION_MAJOR}::Charts Qt${QT_VERSION_MAJOR}::PrintSupport ${Matlab_MEX_LIBRARY} ${Matlab_ENGINE_LIBRARY})
+target_link_libraries(brain_N5000 PRIVATE Qt${QT_VERSION_MAJOR}::Widgets ws2_32 Qt${QT_VERSION_MAJOR}::PrintSupport)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
